fix(css): blank white screen behind payment portal

--- a/packages/website/src/pages/Global.scss
+++ b/packages/website/src/pages/Global.scss
@@ -30,6 +30,10 @@ body {
   overflow-x: hidden;
 }
 
+#cb-frame {
+  color-scheme: auto;
+}
+
 #swal2-title, .swal2-html-container {
   color: white !important;
 }
